      reoccuring. (Robert Collins, Andrew Bennetts)

  DOCUMENTATION:

    * The documentation for ``shelve`` and ``unshelve`` has been clarified.
      (Daniel Watkins, #327421, #327425)

  API CHANGES:

  INTERNALS:

    * ``bzrlib.tests.run_suite`` accepts a runner_class parameter
      supporting the use of different runners. (Robert Collins)

    * New hook Commands['extend_command'] to allow plugins to access a
      command object before the command is run (or help generated from
      it), without overriding the command. (Robert Collins)

    * ``RepositoryFormat`` objects now have a ``network_name`` for passing
      the format across RPC calls. (Robert Collins, Andrew Bennetts)

    * Some methods have been pulled up from ``BzrBranch`` to ``Branch``
      to aid branch types that are not bzr branch objects (like
      RemoteBranch). (Robert Collins, Andrew Bennetts)


bzr 1.12 "1234567890" 2009-02-13
--------------------------------

This release of Bazaar contains many improvements to the speed,
documentation and functionality of ``bzr log`` and the display of logged
revisions by ``bzr status``.  bzr now also gives a better indication of
progress, both in the way operations are drawn onto a text terminal, and
by showing the rate of network IO.

  BUG FIXES:

    * ``bzr init --development-wt5[-rich-root]`` would fail because of
      circular import errors. (John Arbash Meinel, #328135)

  DOCUMENTATION:

    * Expanded the help for log and added a new help topic called
      ``log-formats``.  (Ian Clatworthy)


bzr 1.12rc1 "1234567890" 2009-02-10
-----------------------------------

  COMPATIBILITY BREAKS:

    * By default, ``bzr status`` after a merge now shows just the pending
      merge tip revisions. This improves the signal-to-noise ratio after
      merging from trunk and completes much faster. To see all merged
      revisions, use the new ``-v`` flag.  (Ian Clatworthy)

    * ``bzr log --line`` now shows any tags after the date and before