@@ -65,6 +65,9 @@ IN DEVELOPMENT
     * ``bzrlib.tests.run_suite`` accepts a runner_class parameter
       supporting the use of different runners. (Robert Collins)
 
+    * Creating a repository on a bzr+ssh:// server will now make a single
+      call rather than many VFS calls. (Robert Collins)
+
     * New hook Commands['extend_command'] to allow plugins to access a
       command object before the command is run (or help generated from
       it), without overriding the command. (Robert Collins)
